--- a/escom-bpm-web/src/main/webapp/view/common/dict-rights-childs.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/dict-rights-childs.xhtml
@@ -4,7 +4,7 @@
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
-    <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 col-padding" >
+    <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12" >
         <p:panelGrid columns="2" columnClasses="ui-grid-col-1, ui-grid-col-11" styleClass="ui-grid-col-12" >
             <p:selectBooleanCheckbox value="#{_bean.editedItem.inheritsAccessChilds}" 
                                      disabled="#{_bean.isReadOnly() or !_bean.isHaveRightChangeRight()}"
