--- a/escom-bpm-web/src/main/webapp/view/tasks/task-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/tasks/task-card.xhtml
@@ -77,10 +77,10 @@
             </p:selectOneMenu>
             
             <p:commandLink  value="#{bundle.GoToProcess}"
-                            rendered="#{taskCardBean.editedItem.scheme != null}"
+                            rendered="#{taskCardBean.editedItem.scheme != null and taskCardBean.beanName ne 'processCardBean'}"
                             actionListener="#{taskCardBean.onOpenProcess()}"/>
             <p:commandLink  value="#{bundle.GoToDocument}"
-                            rendered="#{taskCardBean.editedItem.scheme != null}"
+                            rendered="#{taskCardBean.editedItem.scheme != null and taskCardBean.beanName ne 'docCardBean'}"
                             actionListener="#{taskCardBean.onOpenDocument()}"/>
             <p:commandLink  value="#{bundle.ViewDoc}"
                             rendered="#{taskCardBean.editedItem.scheme != null}"
