--- a/escom-bpm-web/src/main/webapp/view/templ/templ-dlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-dlg.xhtml
@@ -88,7 +88,7 @@
                         <ui:insert name="centerFormContent"/>
                     </p:panelGrid>
 
-                    <p:remoteCommand name="onAfterFormLoad" action="#{_bean.onAfterFormLoad()}"/>
+                    <p:remoteCommand name="onAfterFormLoad" action="#{_bean.onAfterFormLoad(_bean)}"/>
                     <ui:insert name="form_scripts"/>
                 </h:form>
             </pe:layoutPane>
